--- a/assets/style.css
+++ b/assets/style.css
@@ -3,23 +3,38 @@
     padding:0;
 }
 
-header,
-footer {
+header{
     width:100%;
-    height:120px;
+    height:180px;
     background-color:magenta;
     color:white;
 
 }
-h1,
+footer {
+    width:100%;
+    height:40px;
+    background-color:magenta;
+    color:white;
+
+}
+h1{
+    text-align:center;
+    font-size:50px;
+    /*font-style:italic;*/
+    font-family:Oswald;
+    font-weight:bolder;
+
+}
 h2{
     text-align:center;
+    font-family:'Oswald';
+    font-size:30px;
 }
 
 img{
     display:block;
-    height:50px;
-    width:50px;
+    height:100px;
+    width:100px;
     margin-left:auto;
     margin-right:auto;
 }
