--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ footer {
 h1{
     text-align:center;
     font-size:50px;
-    /*font-style:italic;*/
+    font-style:italic;
     font-family:'Oswald';
     font-weight:bolder;
 
@@ -41,6 +41,8 @@ img{
 ul{
     padding-left:40px;
     font-size:20px;
+    font-family:'Oswald';
+    font-weight:lighter;
 }
 p{
     text-align:center;
@@ -48,10 +50,6 @@ p{
     
 }
 
-ul{
-    font-family:'Oswald';
-    font-weight:lighter;
-}
 .card {
     width: 80%;
     margin: 40px auto;
